Add Font and Profile page

--- a/WabiSabiTeamProject/Info.plist
+++ b/WabiSabiTeamProject/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF-Pro-Rounded-Black</string>
+		<string>SF-Pro-Rounded-Bold</string>
+		<string>SF-Pro-Rounded-Heavy</string>
+		<string>SF-Pro-Rounded-Light</string>
+		<string>SF-Pro-Rounded-Medium</string>
+		<string>SF-Pro-Rounded-Regular</string>
+		<string>SF-Pro-Rounded-Semibold</string>
+		<string>SF-Pro-Rounded-Thin</string>
+		<string>SF-Pro-Rounded-Ultralight</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
